--- a/src/common/stylus/incon-style.styl
+++ b/src/common/stylus/incon-style.styl
@@ -1,59 +1,59 @@
-@font-face
-  font-family: 'sell-icon'
-  src:  url('fonts/sell-icon.eot?85khf4')
+@font-face {
+  font-family: 'sell-icon';
+  src:  url('fonts/sell-icon.eot?85khf4');
   src:  url('fonts/sell-icon.eot?85khf4#iefix') format('embedded-opentype'),
     url('fonts/sell-icon.ttf?85khf4') format('truetype'),
     url('fonts/sell-icon.woff?85khf4') format('woff'),
-    url('fonts/sell-icon.svg?85khf4#sell-icon') format('svg')
-  font-weight: normal
-  font-style: normal
+    url('fonts/sell-icon.svg?85khf4#sell-icon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
-
-[class^="icon-"], [class*=" icon-"]
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'sell-icon' !important
-  speak: none
-  font-style: normal
-  font-weight: normal
-  font-variant: normal
-  text-transform: none
-  line-height: 1
+  font-family: 'sell-icon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
   /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-
-.icon-add_circle:before
-  content: "\e901"
-
-.icon-arrow_lift:before
-  content: "\e902"
-
-.icon-check_circle:before
-  content: "\e903"
-
-.icon-close:before
-  content: "\e904"
-
-.icon-favorite:before
-  content: "\e905"
-
-.icon-keyboard_arrow_right:before
-  content: "\e906"
-
-.icon-remove_circle_outline:before
-  content: "\e907"
-
-.icon-shopping_cart:before
-  content: "\e908"
-
-.icon-thumb_down:before
-  content: "\e909"
-
-.icon-thumb_up:before
-  content: "\e90a"
-
-.icon-home:before
-  content: "\e900"
-
+.icon-add_circle:before {
+  content: "\e901";
+}
+.icon-arrow_lift:before {
+  content: "\e902";
+}
+.icon-check_circle:before {
+  content: "\e903";
+}
+.icon-close:before {
+  content: "\e904";
+}
+.icon-favorite:before {
+  content: "\e905";
+}
+.icon-keyboard_arrow_right:before {
+  content: "\e906";
+}
+.icon-remove_circle_outline:before {
+  content: "\e907";
+}
+.icon-shopping_cart:before {
+  content: "\e908";
+}
+.icon-thumb_down:before {
+  content: "\e909";
+}
+.icon-thumb_up:before {
+  content: "\e90a";
+}
+.icon-home:before {
+  content: "\e900";
+}
